--- a/Fitnessy/app/src/main/AndroidManifest.xml
+++ b/Fitnessy/app/src/main/AndroidManifest.xml
@@ -6,26 +6,29 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fitnessy"
+        android:theme="@style/Base.Theme.Fitnessy"
         tools:targetApi="31">
         <activity
-            android:name=".OnboardingActivity"
-            android:exported="false"
-            android:label="@string/title_activity_onboarding"
-            android:theme="@style/Theme.Fitnessy" />
+            android:name=".HomeActivity"
+            android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".OnboardingActivity"
+            android:exported="true"
+            android:label=""
+            android:theme="@style/SplashTheme"> <!-- Updated theme here -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
