--- a/Fitnessy/app/src/main/AndroidManifest.xml
+++ b/Fitnessy/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +15,16 @@
         android:theme="@style/Base.Theme.Fitnessy"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
+            android:name=".Dashboard.DashboardActivity"
+            android:exported="true" />
         <activity
-            android:name=".OnboardingActivity"
+            android:name=".auth.SignUpActivity"
+            android:exported="true" />
+        <activity
+            android:name=".auth.LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".onboard.OnboardingActivity"
             android:exported="true"
             android:label=""
             android:theme="@style/SplashTheme"> <!-- Updated theme here -->
@@ -28,7 +36,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
