user setup UI screen :)

--- a/Fitnessy/app/src/main/AndroidManifest.xml
+++ b/Fitnessy/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Base.Theme.Fitnessy"
         tools:targetApi="31">
         <activity
+            android:name=".Dashboard.UserSetupActivity"
+            android:exported="false" />
+        <activity
             android:name=".Dashboard.DashboardActivity"
             android:exported="true" />
         <activity
