--- a/Fitnessy/app/src/main/AndroidManifest.xml
+++ b/Fitnessy/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".user.UserSetupActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".user.DashboardActivity"
             android:exported="true" />
