--- a/Fitnessy/app/src/main/AndroidManifest.xml
+++ b/Fitnessy/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:allowBackup="true"
@@ -14,6 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.Fitnessy"
         tools:targetApi="31">
+        <activity
+            android:name=".user.PrivacyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.EditActivity"
+            android:exported="false" />
         <activity
             android:name=".user.VideoPlayerActivity"
             android:exported="false" />
